--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
@@ -49,6 +50,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
